--- a/render.yaml
+++ b/render.yaml
@@ -2,5 +2,5 @@ services:
   - type: web
     name: agoravai-pain-tracker
     env: python
-    buildCommand: ""
+    buildCommand: "pip install -r requirements.txt"
     startCommand: "python server.py"
